# qt_rs_calc

./: Cargo.toml  README.md  build.rs
qt/: bindings.json  main.cpp  main.qml
src/: calculator.rs  implementation.rs  main.rs
